# ch59x-cmake

./: .gitignore  CMakeEnvs-Mac.txt  CMakeEnvs-Win.txt  CMakeEnvs.txt  CMakeLists.txt  CMakeProjectConfig.txt  CMakeToolchain-Win.txt  LICENSE  build.bat  build.sh  clean.bat  clean.sh  gb2312_to_utf8.py  rebuild.bat  rebuild.sh
APP/: heartbeat.c  main.c  observer.c
APP/include/: heartbeat.h  observer.h
HAL/: MCU.c
HAL/include/: CONFIG.h
StdPeriphDriver/: CH59x_clk.c  CH59x_flash.c  CH59x_gpio.c  CH59x_lcd.c  CH59x_pwm.c  CH59x_pwr.c  CH59x_spi0.c  CH59x_sys.c  CH59x_timer0.c  CH59x_timer1.c  CH59x_timer2.c  CH59x_timer3.c  CH59x_usbhostBase.c  CH59x_usbhostClass.c
StdPeriphDriver/inc/: CH592SFR.h  CH59x_adc.h  CH59x_clk.h  CH59x_common.h  CH59x_flash.h  CH59x_gpio.h  CH59x_pwm.h  CH59x_pwr.h  CH59x_spi.h  CH59x_sys.h  CH59x_usbhost.h  ISP592.h
